upload compress image

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -196,7 +196,22 @@
     "stats": "Statistics",
     "total_teams": "Total teams",
     "active_teams": "Active teams",
-    "avg_points": "Average points"
+    "avg_points": "Average points",
+    "general_ranking": "General Ranking",
+    "my_activities": "My Activities",
+    "my_activities_title": "My Completed Activities",
+    "completed_count": "Completed",
+    "pending_review_count": "Pending",
+    "total_points": "Total points",
+    "no_completed_activities": "No completed activities",
+    "no_completed_activities_desc": "You haven't completed any activities in this event yet",
+    "points": "points",
+    "points_awarded": "points awarded",
+    "completed_time": "Completed",
+    "activity_status": {
+      "pending_review": "Pending review",
+      "reviewed": "Reviewed"
+    }
   },
   "gadgets": {
     "title": "Gadgets",
@@ -307,6 +322,42 @@
     "pending_review": "Pending review",
     "reviewed": "Reviewed",
     "has_media": "Multimedia content available"
+  },
+  "team_activity_readonly": {
+    "access_denied": "Access Denied",
+    "access_denied_desc": "You don't have permission to view this activity",
+    "not_found": "Activity not found",
+    "not_found_desc": "The requested activity could not be found",
+    "not_completed": "Activity not completed",
+    "not_completed_desc": "This activity has not been completed yet",
+    "team": "Team",
+    "type": "Type",
+    "status": "Status",
+    "completed_time": "Completed",
+    "points": "Points",
+    "questions_answers": "Questions and Answers",
+    "question": "Question",
+    "your_answer": "Your answer",
+    "no_answer": "No answer",
+    "test_question": "Test question",
+    "test_completed": "You have completed this test question.",
+    "selected_answer": "Selected answer",
+    "media_activity": "Photo/Video Activity",
+    "no_media": "No multimedia content uploaded",
+    "video_activity": "Video Activity",
+    "photo_activity": "Photo Activity",
+    "activity_details": "Activity Details",
+    "no_description": "No description available",
+    "activity_data": "Activity data",
+    "activity_completion": "Completion information",
+    "activity_type": "Activity type",
+    "completed_status": "Status",
+    "completed": "Completed",
+    "time_used": "Time used",
+    "total_connections": "Total connections",
+    "correct_connections": "Correct connections",
+    "activity_completed_successfully": "Activity completed successfully",
+    "readonly_notice": "This is a read-only view of your completed activity"
   },
   "deviceNotAssigned": {
     "title": "Device not assigned",
