--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -205,7 +205,22 @@
     "stats": "Estadísticas",
     "total_teams": "Equipos totales",
     "active_teams": "Equipos activos",
-    "avg_points": "Puntos promedio"
+    "avg_points": "Puntos promedio",
+    "general_ranking": "Ranking General",
+    "my_activities": "Mis Actividades",
+    "my_activities_title": "Mis Actividades Completadas",
+    "completed_count": "Completadas",
+    "pending_review_count": "Pendientes",
+    "total_points": "Puntos totales",
+    "no_completed_activities": "No hay actividades completadas",
+    "no_completed_activities_desc": "Aún no has completado ninguna actividad en este evento",
+    "points": "puntos",
+    "points_awarded": "puntos otorgados",
+    "completed_time": "Completada",
+    "activity_status": {
+      "pending_review": "Pendiente de valorar",
+      "reviewed": "Valorada"
+    }
   },
   "gadgets": {
     "title": "Gadgets",
@@ -357,6 +372,42 @@
     "pending_review": "Pendiente de revisar",
     "reviewed": "Revisada",
     "has_media": "Contenido multimedia disponible"
+  },
+  "team_activity_readonly": {
+    "access_denied": "Acceso Denegado",
+    "access_denied_desc": "No tienes permisos para ver esta actividad",
+    "not_found": "Actividad no encontrada",
+    "not_found_desc": "No se pudo encontrar la actividad solicitada",
+    "not_completed": "Actividad no completada",
+    "not_completed_desc": "Esta actividad aún no ha sido completada",
+    "team": "Equipo",
+    "type": "Tipo",
+    "status": "Estado",
+    "completed_time": "Completada",
+    "points": "Puntos",
+    "questions_answers": "Preguntas y Respuestas",
+    "question": "Pregunta",
+    "your_answer": "Tu respuesta",
+    "no_answer": "Sin respuesta",
+    "test_question": "Pregunta tipo test",
+    "test_completed": "Has completado esta pregunta tipo test.",
+    "selected_answer": "Respuesta seleccionada",
+    "media_activity": "Actividad de Foto/Video",
+    "no_media": "No se ha subido contenido multimedia",
+    "video_activity": "Actividad de Video",
+    "photo_activity": "Actividad de Foto",
+    "activity_details": "Detalles de la Actividad",
+    "no_description": "Sin descripción disponible",
+    "activity_data": "Datos de la actividad",
+    "activity_completion": "Información de completado",
+    "activity_type": "Tipo de actividad",
+    "completed_status": "Estado",
+    "completed": "Completada",
+    "time_used": "Tiempo utilizado",
+    "total_connections": "Conexiones totales",
+    "correct_connections": "Conexiones correctas",
+    "activity_completed_successfully": "Actividad completada exitosamente",
+    "readonly_notice": "Esta es una vista de solo lectura de tu actividad completada"
   },
   "deviceNotAssigned": {
     "title": "Dispositivo no asociado",
