fix prevent complete

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -476,6 +476,9 @@
 	"meeting_point": {
 		"title": "Meeting Point"
 	},
+	"map": {
+		"refresh_positions": "Refresh team positions"
+	},
 	"status": {
 		"online": "Online",
 		"online_you": "You are online",
