--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -484,6 +484,9 @@
 	},
 	"meeting_point": {
 		"title": "Punto de encuentro"
+	},
+	"map": {
+		"refresh_positions": "Actualizar posiciones de equipos"
 	}
 
 
